Added basic html for library structure and css styling. No JS yet

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <title>Odin Library</title>
 </head>
 <body>
-    
+    <div class = "library">
+        <header>
+            <h1>LIBRARY</h1>
+        </header>
+
+        <main>
+            <div class = "library-cards">
+                <div class = "library-card">
+                    <h1>The Hobbit</h1>
+                </div>
+                <button class = "library-card" id = "add-book">+ <br>Add Book</button>
+
+                
+            </div>
+        </main>
+    </div>
 </body>
 </html>
