--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
                 <div class = "library-cards">
                     <div class = "library-card">
                         <h1>The Hobbit</h1>
+                        <h2>J.R.R Tolkien</h2>
+                        <h3>Completed</h3>
                     </div>
                     <button class = "library-card" id = "add-book">+ <br>Add Book</button>
                 </div>
@@ -34,7 +36,7 @@
                         </div>
                         <div class = "input-container">
                             <label for = "book_status">Status:</label>
-                            <select name = "book_status" id = "read-status" required>
+                            <select name = "book_status" id = "book-status" required>
                                 <option value = "" disabled selected hidden>Select a Status</option>
                                 <option value = "not-read">Not Read</option>
                                 <option value = "to-read">Want to Read</option>
